--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,41 @@
-<p>home works!</p>
+<h1>Home page</h1>
+
+<div class="row mb-2">
+  <div class="col">
+    <label for="search">Search:</label>
+    <!--    <input ng-model="search" id="search" class="form-control" placeholder="Filter text">-->
+  </div>
+</div>
+<table *ngIf="users.length > 0; let i = index" class="table table-striped table-bordered">
+  <thead>
+  <tr>
+    <th *ngFor="let i of labels" scope="col">{{i}}</th>
+    <th>
+      <a class="btn btn-success" href="#!/create" type="button">Create new</a>
+    </th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let user of users">
+    <th scope="row">{{user.id}}</th>
+    <td>{{user.username}}</td>
+    <td>{{user.email}}</td>
+    <td>@{{user.phone}}</td>
+    <td>
+      <div class="btn-group" role="group">
+        <!--        <a href="#!/read/{{user.id}}" type="button" class="btn btn-info">Read</a>-->
+        <!--        <a href="#!/update/{{user.id}}" type="button" class="btn btn-warning">Update</a>-->
+        <!--        <a href="#!/delete/{{user.id}}" type="button" class="btn btn-danger">Delete</a>-->
+      </div>
+    </td>
+  </tr>
+  </tbody>
+</table>
+
+<div class="row">
+  <div class="col">
+    <!--    <button ng-disabled="beforeDisable()" class="btn btn-primary" ng-click="before()">Before</button>-->
+    <!--    <span>Page {{currentPage}} of {{totalPages}}</span>-->
+    <!--    <button ng-disabled="nextDisable()" class="btn btn-primary" ng-click="next()">Next</button>-->
+  </div>
+</div>
