--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<nav>
+  <ul class="nav justify-content-center bg-light">
+    <li class="nav-item">
+      <a class="nav-link active" href="#!/home">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#!/create">Create</a>
+    </li>
+  </ul>
+</nav>
+
 <router-outlet></router-outlet>
