--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <nav>
   <ul class="nav justify-content-center bg-light">
     <li class="nav-item">
-      <a class="nav-link active" href="#!/home">Home</a>
+      <a class="nav-link active" routerLink="home">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#!/create">Create</a>
+      <a class="nav-link" routerLink="create">Create</a>
     </li>
   </ul>
 </nav>
