--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,10 @@
   </ul>
 </nav>
 
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
