--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -11,7 +11,7 @@
   <tr>
     <th *ngFor="let i of labels" scope="col">{{i}}</th>
     <th>
-      <a class="btn btn-success" routerLink="create" type="button">Create new</a>
+      <a class="btn btn-success" routerLink="/create" type="button">Create new</a>
     </th>
   </tr>
   </thead>
