--- a/src/app/views/read/read.component.html
+++ b/src/app/views/read/read.component.html
@@ -1,6 +1,6 @@
 <h1>Read page</h1>
 
-<table *ngIf="user" class="table table-dark">
+<table *ngIf="user$ | async as user" class="table table-dark">
   <tbody>
   <tr>
     <th>ID</th>
