--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -23,9 +23,9 @@
     <td>@{{user.phone}}</td>
     <td>
       <div class="btn-group" role="group">
-        <a [routerLink]="['/read', user.id]" class="btn btn-info" type="button">Read</a>
-        <a [routerLink]="['/update', user.id]" class="btn warning" type="button">Update</a>
-        <a [routerLink]="['/delete', user.id]" class="btn danger" type="button">Delete</a>
+        <a (click)="selectUser(user)" [routerLink]="['/read', user.id]" class="btn btn-info" type="button">Read</a>
+        <a (click)="selectUser(user)" [routerLink]="['/update', user.id]" class="btn warning" type="button">Update</a>
+        <a (click)="selectUser(user)" [routerLink]="['/delete', user.id]" class="btn danger" type="button">Delete</a>
       </div>
     </td>
   </tr>
