--- a/src/app/views/create/create.component.html
+++ b/src/app/views/create/create.component.html
@@ -1,6 +1,6 @@
 <h1>Create page</h1>
 
-<form [formGroup]="userForm" class="mb-2 pb-2">
+<form [formGroup]="form" class="mb-2 pb-2">
   <div class="form-group mb-2">
     <label for="first">User name</label>
     <input aria-describedby="firstHelp" class="form-control" formControlName="username" id="first"
