Add delete func

--- a/src/app/views/delete/delete.component.html
+++ b/src/app/views/delete/delete.component.html
@@ -1,1 +1,6 @@
-<p>delete works!</p>
+<h1>Delete page</h1>
+
+<div class="alert alert-success" ng-if="successMsg" role="alert">
+  <p>Successfully deleted. Id: {{id}}</p>
+  {{successMsg.status | json}}
+</div>
