--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,6 +5,9 @@
     <label for="search">Search:</label>
     <!--    <input ng-model="search" id="search" class="form-control" placeholder="Filter text">-->
   </div>
+  <div class="col">
+    <app-parent-dynamic></app-parent-dynamic>
+  </div>
 </div>
 <table *ngIf="users$ | async as users" class="table table-striped table-bordered">
   <thead>
