--- a/src/app/views/parent-dynamic/parent-dynamic.component.html
+++ b/src/app/views/parent-dynamic/parent-dynamic.component.html
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col border p-2 border-color-warning text-success">
   <h3>Parent</h3>
 
   <ng-template appShowDynamic></ng-template>
