--- a/src/app/views/create/create.component.html
+++ b/src/app/views/create/create.component.html
@@ -4,7 +4,7 @@
 
   <formly-form [fields]="fields" [form]="form" [model]="model" class="mb-5"></formly-form>
 
-  <button (click)="reset()" class="btn btn-success" type="button">Reset</button>
+  <button (click)="reset()" class="btn btn-success mr-2" type="button">Reset</button>
   <button (click)="submit()" [disabled]="disabled" class="btn btn-success" type="submit">Save</button>
 
   <br>
