--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -6,7 +6,12 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Title</h5>
-          <p class="card-text">{{model | json}}</p>
+          <div *ngFor="let i of model | keyvalue">
+            <p class="card-text">
+              <b>{{i.key}}: &nbsp;</b>
+              <span>{{i.value}}</span>
+            </p>
+          </div>
         </div>
       </div>
 
