--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -6,7 +6,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Title</h5>
-          <div *ngFor="let i of model | keyvalue">
+          <div *ngFor="let i of mainModel.model | keyvalue">
             <p class="card-text">
               <b>{{i.key}}: &nbsp;</b>
               <span>{{i.value}}</span>
@@ -15,7 +15,7 @@
         </div>
       </div>
 
-      <formly-form [fields]="fields" [form]="form" [model]="model" [options]="options"></formly-form>
+      <formly-form [fields]="fields" [form]="form" [model]="mainModel.model" [options]="options"></formly-form>
     </form>
   </div>
 </div>
