--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -17,5 +17,7 @@
 
       <formly-form [fields]="fields" [form]="form" [model]="mainModel.model" [options]="options"></formly-form>
     </form>
+
+    Async data: {{existingProjects | json}}
   </div>
 </div>
