--- a/src/app/views/step/list/list.component.html
+++ b/src/app/views/step/list/list.component.html
@@ -2,7 +2,7 @@
   <div class="col d-flex justify-content-center">
     <div *ngIf="users$ | async as users" class="border p-2">
       <p *ngFor="let u of users">
-        <a [routerLink]="['/', 'step/form', u.id]">{{u.username}}</a>
+        <a [routerLink]="['/', 'step','form', u.id]">{{u.username}}</a>
       </p>
     </div>
   </div>
