--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -1,4 +1,11 @@
 <div class="container" style="margin: 0 auto;">
+
+  <div class="row mt-3">
+    <div class="col">
+      <app-step></app-step>
+    </div>
+  </div>
+
   <div class="row mt-3">
     <div class="col">
       <app-info [model]="mainModel.model"></app-info>
