Change nav link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link active" routerLink="home">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="create">Create</a>
+      <a class="nav-link" routerLink="step">Step</a>
     </li>
   </ul>
 </nav>
