--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -1,23 +1,1 @@
-<div class="container" style="margin: 0 auto;">
-
-  <div class="row mt-3">
-    <div class="col">
-      <app-step></app-step>
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col">
-      <app-info [model]="mainModel.model"></app-info>
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col">
-      <form (ngSubmit)="submit()" [formGroup]="form">
-
-        <formly-form [fields]="fields" [form]="form" [model]="mainModel.model" [options]="options"></formly-form>
-      </form>
-    </div>
-  </div>
-</div>
+<span class="text-default">form</span>
