--- a/src/app/views/step/step-page/step-page.component.html
+++ b/src/app/views/step/step-page/step-page.component.html
@@ -14,6 +14,7 @@
 
   <div class="row mt-3">
     <div class="col">
+      <app-form></app-form>
       <form (ngSubmit)="submit()" [formGroup]="form">
 
         <formly-form [fields]="fields" [form]="form" [model]="mainModel.model" [options]="options"></formly-form>
