Show title in info page

--- a/src/app/views/step/info/info.component.html
+++ b/src/app/views/step/info/info.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
-    <h5 class="card-title">Title</h5>
+    <h5 *ngIf="title" class="card-title">{{title}}</h5>
     <div *ngFor="let i of model | keyvalue">
       <p class="card-text">
         <b>{{i.key}}: &nbsp;</b>
