Send configs down to info

--- a/src/app/views/step/step-page/step-page.component.html
+++ b/src/app/views/step/step-page/step-page.component.html
@@ -7,8 +7,8 @@
   </div>
 
   <div class="row mt-3">
-    <app-info [model]="mainModel.model" class="col" title="Source Information"></app-info>
-    <app-info [model]="mainModel.model" class="col" title="Last information"></app-info>
+    <app-info [configs$]="configs$" class="col" title="Source Information"></app-info>
+    <app-info [configs$]="configs$" class="col" title="Last information"></app-info>
   </div>
 
   <div class="row mt-3">
