--- a/src/app/views/step/info/info.component.html
+++ b/src/app/views/step/info/info.component.html
@@ -1,7 +1,7 @@
-<div class="card" style="width: 18rem;">
+<div *ngIf="configs$ | async as configs" class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 *ngIf="title" class="card-title">{{title}}</h5>
-    <div *ngFor="let i of model | keyvalue">
+    <div *ngFor="let i of configs | keyvalue">
       <p class="card-text">
         <b>{{i.key}}: &nbsp;</b>
         <span>{{i.value}}</span>
