Move form data to component

--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -1,1 +1,7 @@
-<span class="text-default">form</span>
+<form (ngSubmit)="submit()" [formGroup]="form">
+
+  <formly-form
+    [fields]="fields" [form]="form" [model]="mainModel.model"
+    [options]="options"
+  ></formly-form>
+</form>
