Send configs to form

--- a/src/app/views/step/step-page/step-page.component.html
+++ b/src/app/views/step/step-page/step-page.component.html
@@ -13,7 +13,7 @@
 
   <div class="row mt-3">
     <div class="col">
-      <app-form></app-form>
+      <app-form [configs$]="configs$"></app-form>
     </div>
   </div>
 </div>
