--- a/src/app/views/step/form/form.component.html
+++ b/src/app/views/step/form/form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="submit()" [formGroup]="form">
+<form (ngSubmit)="submit()" *ngIf="configs" [formGroup]="form">
 
   <formly-form
     [fields]="initialFormConfigs" [form]="form" [model]="configs"
