Get form values of current step

--- a/src/app/views/step/step/step.component.html
+++ b/src/app/views/step/step/step.component.html
@@ -1,6 +1,10 @@
 <mat-horizontal-stepper *ngIf="field" [linear]="true">
   <div *ngFor="let step of field.fieldGroup; let index = index; let last = last;">
-    <mat-step [completed]="checkEditable(index, step)" [editable]="checkEditable(index, step)">
+    <mat-step
+      (interacted)="interacted($event, step)"
+      [completed]="checkEditable(index, step)"
+      [editable]="checkEditable(index, step)"
+    >
       <ng-template matStepLabel>{{ step.templateOptions?.label }}</ng-template>
       <!--Stepper должен быть отдельно -->
       <formly-field [field]="step"></formly-field>
